fixed z-index bug

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -439,7 +439,7 @@ form .input-group .form-control {
 	text-align: center;
 	position: relative;
 	margin: 0 auto;
-	z-index: 1000;
+	z-index: 101;
 	display: none;
 }
 
